--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -10,5 +10,9 @@
   "response-other-diploma": "Resultat:",
   "response-other-diploma-0-text": "Noch kein Diplom eingereicht.",
   "response-other-diploma-1-text": "Das Diplom wurde erfolgreich verifiziert.",
-  "response-other-diploma-90-text": "Das Diplom konnte nicht verifiziert werden!"
+  "response-other-diploma-90-text": "Das Diplom konnte nicht verifiziert werden!",
+  "transfer-your-vc": "Übernehmen Sie Ihren elektronischen Nachweis",
+  "transfer-your-vc-clipboard": "Zwischenablage",
+  "transfer-your-vc-wallet": "Wallet",
+  "from": "von"
 }
