--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -1,12 +1,13 @@
 {
     "error-login-message": "You need to be logged in to use this function!",
     "error-permission-message": "This application is currently only available for students!",
+    "fetch-your-vc": "Transfer your verifiable credential from",
+    "fetch-your-vc-clipboard": "Clipboard",
+    "file-sink": {
+        "modal-close": ""
+    },
+    "from": "from",
     "loading-message": "Loading...",
-    "reload": "Refresh",
-    "reload-failed": "Automatic update failed",
-    "upload-other-diploma": "Upload and verify a diploma",
-    "upload-other-diploma-text": "In order to get your diploma form another university acknowledged you can upload and start the verification here.",
-    "upload-btn-text": "upload and verify",
     "response-other-diploma": "Result",
     "response-other-diploma-0-text": "No diploma submitted.",
     "response-other-diploma-1-text": "The diploma was successfully verified.",
@@ -14,8 +15,7 @@
     "transfer-your-vc": "Transfer your verifiable credential to",
     "transfer-your-vc-clipboard": "Clipboard",
     "transfer-your-vc-wallet": "Wallet",
-    "from": "from",
-    "fetch-your-vc": "Transfer your verifiable credential from",
-    "fetch-your-vc-clipboard": "Clipboard",
-    "fetch-your-vc-wallet": "Wallet"
+    "upload-btn-text": "upload and verify",
+    "upload-other-diploma": "Upload and verify a diploma",
+    "upload-other-diploma-text": "In order to get your diploma form another university acknowledged you can upload and start the verification here."
 }
